--- a/src/index.css
+++ b/src/index.css
@@ -95,17 +95,25 @@
 @layer base {
   * {
     @apply border-border;
-    touch-action: pan-x pan-y;
   }
 
-  *:not(input):not(select):not(code):not(textarea):not([contenteditable]) {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
- }
+  *:focus {
+    outline: none;
+  }
+
+  @media (display-mode: standalone) {
+    * {
+      touch-action: pan-x pan-y;
+    }
+    *:not(input):not(select):not(code):not(textarea):not([contenteditable]) {
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+  }
 
   html, body {
     @apply bg-background text-foreground;
